--- a/index.html
+++ b/index.html
@@ -240,20 +240,21 @@ are
                         Lesson:</span></b></span></span></font></font></span></font></span></p>
     <ul>
       <li>
-        <p style="orphans: 2; widows: 2" align="justify"><a href="https://aritra855.github.io/pylearn-variable/"
-            title="Variables" target="_blank"><span style="font-variant: normal"><font
-                color="#000000"><span style="text-decoration: none"><font face="Cambria, serif"><font
-                      style="font-size: 12pt" size="3"><span style="letter-spacing: normal"><span
-                          lang="zxx"><span style="font-style: normal"><b><span style="background: #ffffff">Varying
-                                Values</span></b></span></span></span></font></font></span></font></span></a></p>
+        <p style="orphans: 2; widows: 2" align="justify"><span style="color: #000099;"><a
+              href="https://aritra855.github.io/pylearn-variable/" title="Variables"
+              target="_blank"><span style="font-variant: normal"><span style="text-decoration: none"><font
+                    face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
+                        style="letter-spacing: normal"><span lang="zxx"><span style="font-style: normal"><b><span
+                                style="background: #ffffff">Varying Values</span></b></span></span></span></font></font></span></span></a></span></p>
       </li>
       <li>
-        <p style="orphans: 2; widows: 2" align="justify"><a href="https://aritra855.github.io/pylearn-operator/"
-            title="Operators" target="_blank"><span style="font-variant: normal"><font
-                color="#000000"><span style="text-decoration: none"><font face="Cambria, serif"><font
-                      style="font-size: 12pt" size="3"><span style="letter-spacing: normal"><span
-                          lang="zxx"><span style="font-style: normal"><b><span style="background: #ffffff">Understanding
-                                my Operators</span></b></span></span></span></font></font></span></font></span></a></p>
+        <p style="background-color: white;" align="justify"><span style="color: #000099;"><a
+              href="https://aritra855.github.io/pylearn-operator/" title="Operators"
+              target="_blank"><span style="font-variant: normal"><span style="text-decoration: none"><font
+                    face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
+                        style="letter-spacing: normal"><span lang="zxx"><span style="font-style: normal"><b><span
+                                style="background: #ffffff">Understanding my
+                                Operators</span></b></span></span></span></font></font></span></span></a></span></p>
       </li>
     </ul>
     <p style="orphans: 2; widows: 2" align="justify"><span style="font-variant: normal"><font
@@ -272,12 +273,12 @@ are
                           Lesson:</span></b></span></span></span></font></font></span></font></span></p>
     <ul>
       <li>
-        <p style="orphans: 2; widows: 2" align="justify"><a href="https://aritra855.github.io/pylearn-add-sub"
-            title="Add &amp; Sub" target="_blank"><span style="font-variant: normal"><font
-                color="#000000"><span style="text-decoration: none"><font face="Cambria, serif"><font
-                      style="font-size: 12pt" size="3"><span style="letter-spacing: normal"><span
-                          lang="zxx"><span style="font-style: normal"><b><span style="background: #ffffff">Add
-                                and Subtract</span></b></span></span></span></font></font></span></font></span></a></p>
+        <p style="orphans: 2; widows: 2" align="justify"><span style="color: #000099;"><a
+              href="https://aritra855.github.io/pylearn-add-sub" title="Add &amp; Sub"
+              target="_blank"><span style="font-variant: normal"><span style="text-decoration: none"><font
+                    face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
+                        style="letter-spacing: normal"><span lang="zxx"><span style="font-style: normal"><b><span
+                                style="background: #ffffff">Add and Subtract</span></b></span></span></span></font></font></span></span></a></span></p>
       </li>
     </ul>
     <p> </p>
