--- a/index.html
+++ b/index.html
@@ -6,25 +6,16 @@
     <meta name="author" content="Aritra855">
   </head>
   <body>
-    <p style="orphans: 2; widows: 2" align="center">
-    </p>
-    <p style="orphans: 2; widows: 2" align="center">
-      <font face="Courier New, monospace"><span style="font-variant: normal"><font
-            color="#000000"><span style="text-decoration: none"><font style="font-size: 20pt"
-                size="5"><span style="letter-spacing: normal"><i><span style="font-weight: normal">PyLearn
-/
-                      </span></i></span></font></span></font></span><span style="font-variant: normal"><font
+    <p style="orphans: 2; widows: 2" align="center"> </p>
+    <p style="orphans: 2; widows: 2" align="center"> <font face="Courier New, monospace"><span
+          style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
+                style="font-size: 20pt" size="5"><span style="letter-spacing: normal"><i><span
+                      style="font-weight: normal">PyLearn
+                      / </span></i></span></font></span></font></span><span style="font-variant: normal"><font
             color="#000000"><span style="text-decoration: none"><font style="font-size: 20pt"
                 size="5"><span style="letter-spacing: normal"><i><span style="font-weight: normal">Multiply
 &amp;
                       Divide</span></i></span></font></span></font></span></font></p>
-    <p style="orphans: 2; widows: 2" align="center"><span style="font-variant: normal"><font
-          color="#000000"><span style="text-decoration: none"><font face="Facon"><font
-                style="font-size: 20pt" size="5"><span style="letter-spacing: normal"><i><span
-                      style="font-weight: normal"></span></i></span></font></font></span></font></span></p>
-    <p style="orphans: 2; widows: 2" align="center"><br>
-      <br>
-    </p>
     <p style="orphans: 2; widows: 2" align="left"><br>
       <br>
     </p>
@@ -37,11 +28,9 @@ to
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Times New Roman"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span style="font-style: normal"><span
-                      style="font-weight: normal">m
-                      going to show you ho to multiply and divide to numbers in
-                      Python. In
-                      the previous tutorial I had shown how to add and subtract
-                      numbers in
+                      style="font-weight: normal">m going to show you ho to
+                      multiply and divide to numbers in Python. In the previous
+                      tutorial I had shown how to add and subtract numbers in
                       Python</span></span></span></font></font></span></font></span><span
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
@@ -52,25 +41,22 @@ to
           color="#000000"><span style="text-decoration: none"><font face="Cambria, serif"><font
                 style="font-size: 12pt" size="3"><span style="letter-spacing: normal"><span
                     style="font-style: normal"><span style="font-weight: normal"><span
-                        style="background: #ffffff">Suppose
-                        you are programming a racing game. Now you want to
-                        design it in such
-                        a way that </span></span></span></span></font></font></span></font></span><span
+                        style="background: #ffffff">Suppose you are programming
+                        a racing game. Now you want to design it in such a way
+                        that </span></span></span></span></font></font></span></font></span><span
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span style="font-style: normal"><span
                       style="font-weight: normal"><span style="background: #ffffff">the
 speed
                         of the car, increases on kicking the gas pedal and
-                        decreases on
-                        applying the brakes, at a constant rate. You would need
-                        to multiply
-                        the speed of the car with some number, say</span></span></span></span></font></font></span></font></span><span
+                        decreases on applying the brakes, at a constant rate.
+                        You would need to multiply the speed of the car with
+                        some number, say</span></span></span></span></font></font></span></font></span><span
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><i><span style="font-weight: normal"><span
-                        style="background: #ffffff">
-                      </span></span></i></span></font></font></span></font></span><span
+                        style="background: #ffffff"> </span></span></i></span></font></font></span></font></span><span
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Georgia, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><i><span style="font-weight: normal"><span
@@ -89,21 +75,17 @@ speed
                   style="letter-spacing: normal"><span style="font-style: normal"><span
                       style="font-weight: normal"><span style="background: #ffffff">,
                         for decreasing it’s speed on applying the brakes. You
-                        can easily
-                        perform the multiplication and division of fairly large
-                        numbers
-                        easily in Python. Two examples of multiplication and
-                        division are
-                        given below:</span></span></span></span></font></font></span></font></span></p>
+                        can easily perform the multiplication and division of
+                        fairly large numbers easily in Python. Two examples of
+                        multiplication and division are given below:</span></span></span></span></font></font></span></font></span></p>
     <p style="orphans: 2; widows: 2" align="justify"><br>
       <br>
     </p>
     <p style="font-variant: normal; letter-spacing: normal; font-style: normal; font-weight: normal; orphans: 2; widows: 2"
-      align="justify">
-      <font color="#000000"><font face="Courier New, monospace"><font style="font-size: 12pt"
-            size="3"><span style="background: #dddddd"><span style="text-decoration: none">print
-(2
-                * 2)</span></span></font></font></font></p>
+      align="justify"> <font color="#000000"><font face="Courier New, monospace"><font
+            style="font-size: 12pt" size="3"><span style="background: #dddddd"><span
+                style="text-decoration: none">print
+                (2 * 2)</span></span></font></font></font></p>
     <p style="orphans: 2; widows: 2" align="justify"><span style="font-variant: normal"><font
           color="#000000"><span style="text-decoration: none"><font face="Cambria, serif"><font
                 style="font-size: 12pt" size="3"><span style="letter-spacing: normal"><span
@@ -114,16 +96,14 @@ speed
                   style="letter-spacing: normal"><span style="font-style: normal"><span
                       style="font-weight: normal"><span style="background: #fff5ce">4</span></span></span></span></font></font></span></font></span></p>
     <p style="font-variant: normal; letter-spacing: normal; font-style: normal; font-weight: normal; orphans: 2; widows: 2"
-      align="justify">
-      <br>
+      align="justify"> <br>
       <br>
     </p>
     <p style="font-variant: normal; letter-spacing: normal; font-style: normal; font-weight: normal; orphans: 2; widows: 2"
-      align="justify">
-      <font color="#000000"><font face="Courier New, monospace"><font style="font-size: 12pt"
-            size="3"><span style="background: #dddddd"><span style="text-decoration: none">print
-(2
-                / 2</span><span style="text-decoration: none">)</span></span></font></font></font></p>
+      align="justify"> <font color="#000000"><font face="Courier New, monospace"><font
+            style="font-size: 12pt" size="3"><span style="background: #dddddd"><span
+                style="text-decoration: none">print
+                (2 / 2</span><span style="text-decoration: none">)</span></span></font></font></font></p>
     <p style="orphans: 2; widows: 2" align="justify"><span style="font-variant: normal"><font
           color="#000000"><span style="text-decoration: none"><font face="Cambria, serif"><font
                 style="font-size: 12pt" size="3"><span style="letter-spacing: normal"><span
@@ -141,25 +121,19 @@ speed
           color="#000000"><span style="text-decoration: none"><font face="Cambria, serif"><font
                 style="font-size: 12pt" size="3"><span style="letter-spacing: normal"><span
                     style="font-style: normal"><span style="font-weight: normal"><span
-                        style="background: #ffffff">The
-                        programs given above are pretty simple. I have not
-                        included large
-                        numbers for the sake of simplicity. The first program
-                        multiplies 2
-                        with 2 and thus, we get the output as 4 which is the
-                        product of 2 and
-                        2. the second one does a similar work the only
-                        difference is that
-                        instead of multiplying, it divides the numbers and
-                        hence, we get the
-                        output as 1. There are two operators in work in the
-                        given programs.
-                        The first one is the </span></span></span></span></font></font></span></font></span><span
+                        style="background: #ffffff">The programs given above are
+                        pretty simple. I have not included large numbers for the
+                        sake of simplicity. The first program multiplies 2 with
+                        2 and thus, we get the output as 4 which is the product
+                        of 2 and 2. the second one does a similar work the only
+                        difference is that instead of multiplying, it divides
+                        the numbers and hence, we get the output as 1. There are
+                        two operators in work in the given programs. The first
+                        one is the </span></span></span></span></font></font></span></font></span><span
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span style="font-style: normal"><b><span
-                        style="background: #ffffff">multiplication
-                      </span></b></span></span></font></font></span></font></span><span
+                        style="background: #ffffff">multiplication </span></b></span></span></font></font></span></font></span><span
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span style="font-style: normal"><span
@@ -183,8 +157,7 @@ the
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span style="font-style: normal"><b><span
-                        style="background: #ffffff">division
-                      </span></b></span></span></font></font></span></font></span><span
+                        style="background: #ffffff">division </span></b></span></span></font></font></span></font></span><span
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span style="font-style: normal"><span
@@ -199,8 +172,7 @@ the
                   style="letter-spacing: normal"><span style="font-style: normal"><span
                       style="font-weight: normal"><span style="background: #ffffff">”.
 These
-                        operators simply multiply and divide the numbers
-                      </span></span></span></span></font></font></span></font></span><span
+                        operators simply multiply and divide the numbers </span></span></span></span></font></font></span></font></span><span
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span style="font-style: normal"><span
@@ -213,23 +185,21 @@ These
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span style="font-style: normal"><span
                       style="font-weight: normal"><span style="background: #ffffff">tically.
-                      </span></span></span></span></font></font></span></font></span><span
+                        </span></span></span></span></font></font></span></font></span><span
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span style="font-style: normal"><span
                       style="font-weight: normal"><span style="background: #ffffff">There
 are
                         yet other arithmetic operators in Python whose functions
-                        I will
-                        explain in the tutorials to come.</span></span></span></span></font></font></span></font></span></p>
+                        I will explain in the tutorials to come.</span></span></span></span></font></font></span></font></span></p>
     <p style="orphans: 2; widows: 2" align="justify"><span style="font-variant: normal"><font
           color="#000000"><span style="text-decoration: none"><font face="Cambria, serif"><font
                 style="font-size: 12pt" size="3"><span style="letter-spacing: normal"><span
                     style="font-style: normal"><span style="font-weight: normal"><span
-                        style="background: #ffffff">In
-                        the next lesson I would explain how to perform
-                        calculations like
-                        addition and subtraction in Python. Thanks!</span></span></span></span></font></font></span></font></span></p>
+                        style="background: #ffffff">In the next lesson I would
+                        explain how to perform calculations like addition and
+                        subtraction in Python. Thanks!</span></span></span></span></font></font></span></font></span></p>
     <p style="orphans: 2; widows: 2" align="justify"><br>
       <br>
     </p>
@@ -269,8 +239,7 @@ are
         style="font-variant: normal"><font color="#000000"><span style="text-decoration: none"><font
               face="Cambria, serif"><font style="font-size: 12pt" size="3"><span
                   style="letter-spacing: normal"><span lang="zxx"><span style="font-style: normal"><b><span
-                          style="background: #ffffff">revious
-                          Lesson:</span></b></span></span></span></font></font></span></font></span></p>
+                          style="background: #ffffff">revious Lesson:</span></b></span></span></span></font></font></span></font></span></p>
     <ul>
       <li>
         <p style="orphans: 2; widows: 2" align="justify"><span style="color: #000099;"><a
